--- a/src/app/component/counterbutton/counterbutton.component.html
+++ b/src/app/component/counterbutton/counterbutton.component.html
@@ -1,5 +1,5 @@
 <h1>Counter Application</h1>
 
-<button (click)="OnIncrement()">Increment (+)</button>
-<button (click)="OnDecrement()">Decrement (-)</button>
-<button (click)="OnReset()">Reset</button>
+<button mat-button mat-raised-button color="primary" (click)="OnIncrement()">Increment (+)</button>
+<button mat-raised-button color="accent" (click)="OnDecrement()">Decrement (-)</button>
+<button mat-raised-button color="warn" (click)="OnReset()">Reset</button>
